# hopr

./: CMakeLists.txt  CMakeListsLib.txt
.githooks/: pre-commit
.github/workflows/: cmake-make.yml  cmake-ninja.yml
buildTests/: CMakeLists.txt
cmake/: FindCGNS.cmake  SetCompiler.cmake  SetGitHook.cmake  SetLibraries.cmake  SetMachine.cmake
docs/documentation/developerguide/: styleguide.md
docs/documentation/userguide/: meshformat.md
src/: CMakeLists.txt  commandlinearguments.f90
unitTests/: CMakeLists.txt  MatrixInverse.f90  ReadInTools.f90
